# opendiapason

./: CMakeLists.txt  LICENSE  README.md  fastconv.h  odfilter.h
app_autoloop/: CMakeLists.txt  app_autoloop.c
app_engprofile/: CMakeLists.txt  app_engprofile.c
app_fastconvtest/: app_fastconvtest.c
app_geninterp/: CMakeLists.txt  app_geninterp.c
app_sampleauth/: CMakeLists.txt  app_sampleauth.c  wav_sample.h  wav_sample_read.c  wav_sample_read.h  wav_sample_write.c  wav_sample_write.h
app_sampletest/: CMakeLists.txt  app_sampletest.c
app_sampletune/: CMakeLists.txt  app_sampletune.c
cmakemodules/: FindPortaudio.cmake  FindPortmidi.cmake
lib_odfilter/: CMakeLists.txt  odfilter.c
src/: CMakeLists.txt  bufcvt.h  decode_least16x1.h  decode_least16x2.h  decode_types.h  fastconv.c  filterutils.c  filterutils.h  interp_data.inc  interpdata.c  interpdata.h  interpdata_initpf.c  playeng.c  playeng.h  reltable.c  reltable.h  strset.c  strset.h  wav_dumper.c  wav_dumper.h  wavldr.c  wavldr.h
